Detect BLE support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">VS_pascalo_BleSensirion</string>
+    <string name="app_name">VS pascalo BleSensirion</string>
+    <string name="ble_enabled">This device supports BLE.</string>
+    <string name="ble_disabled">This device does not support BLE.</string>
 </resources>
