Added Humidity to display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">VS_pascalo_BleSensirion</string>
-    <string name="ble_enabled">This device supports BLE.</string>
-    <string name="ble_disabled">This device does not support BLE.</string>
-    <string name="axis_title">C° / %</string>
+    <string name="app_name">Sensirion Gadget Reader</string>
+    <string name="temp_axis_title">C°</string>
+    <string name="humid_axis_title">%</string>
     <string name="button_text">Disconnect</string>
 </resources>
